--- a/package.json
+++ b/package.json
@@ -25,21 +25,21 @@
   },
   "homepage": "https://github.com/johnameyer/can-i-have-that-server#readme",
   "dependencies": {
-    "@types/express": "^4.17.4",
-    "@types/socket.io": "^2.1.4",
-    "@types/socket.io-client": "^1.4.32",
-    "can-i-have-that": "^0.0.0",
-    "drag-drop-regions": "^1.0.0",
+    "@types/express": "^4.17.7",
+    "@types/socket.io": "^2.1.8",
+    "@types/socket.io-client": "^1.4.33",
+    "can-i-have-that": ">=0.0.3",
+    "drag-drop-regions": ">=1.0.0",
     "express": "^4.17.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.1"
+    "typescript": "^3.9.6",
+    "webpack": "^4.43.0"
   },
   "devDependencies": {
     "html-webpack-plugin": "^4.3.0",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "webpack-cli": "^3.3.11"
+    "ts-node-dev": "^1.0.0-pre.50",
+    "webpack-cli": "^3.3.12"
   },
   "sideEffects": false
 }
