--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@types/express": "^4.17.7",
     "@types/socket.io": "^2.1.8",
     "@types/socket.io-client": "^1.4.33",
-    "can-i-have-that": ">=0.0.3",
-    "drag-drop-regions": ">=1.0.0",
+    "can-i-have-that": "0.0.4",
+    "drag-drop-regions": "^1.0.4",
     "express": "^4.17.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
