--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "can-i-have-that": "0.0.20",
     "drag-drop-regions": "^1.0.8",
     "express": "^4.17.1",
+    "rxjs": "^6.6.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "webpack": "^4.43.0"
