--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/express": "^4.17.7",
     "@types/socket.io": "^2.1.8",
     "@types/socket.io-client": "^1.4.33",
-    "can-i-have-that": "0.0.20",
+    "can-i-have-that": "file:../CanIHaveThat",
     "drag-drop-regions": "^1.0.8",
     "express": "^4.17.1",
     "rxjs": "^6.6.2",
@@ -40,7 +40,7 @@
     "html-webpack-plugin": "^4.3.0",
     "ts-loader": "^8.0.0",
     "ts-node-dev": "^1.0.0-pre.50",
-    "typescript": "^3.9.6",
+    "typescript": "^4.0.2",
     "webpack-cli": "^3.3.12"
   },
   "sideEffects": false
