--- a/package.json
+++ b/package.json
@@ -24,18 +24,21 @@
   },
   "homepage": "https://github.com/johnameyer/can-i-have-that-server#readme",
   "dependencies": {
+    "@cards-ts/can-i-have-that": "file:../CanIHaveThat/packages/can-i-have-that",
+    "@cards-ts/core": "file:../CanIHaveThat/packages/core",
+    "@cards-ts/hearts": "file:../CanIHaveThat/packages/hearts",
     "@types/express": "^4.17.7",
     "@types/socket.io": "^2.1.8",
     "@types/socket.io-client": "^1.4.33",
-    "can-i-have-that": "file:../CanIHaveThat",
     "drag-drop-regions": "^1.0.8",
     "express": "^4.17.1",
     "rxjs": "^6.6.2",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "webpack": "^4.43.0"
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-dev-server": "^3.11.0",
     "copy-webpack-plugin": "^6.0.3",
     "html-webpack-plugin": "^4.3.0",
     "ts-loader": "^8.0.0",
